# RusTalk

./: .gitignore  ARCHITECTURE.md  Cargo.toml  FEATURES.md  IMPLEMENTATION_SUMMARY.md  README.md  RELEASE.md  TEAMS_API_IMPLEMENTATION.md  config.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
rustalk-cli/: Cargo.toml
rustalk-cli/src/: cert.rs  console.rs  main.rs
rustalk-cloud/: Cargo.toml
rustalk-cloud/src/: lib.rs  ratings.rs
rustalk-cloud/src/api/: mod.rs
rustalk-cloud/src/handlers/: acls.rs  call_logs.rs  certificates.rs  codecs.rs  dids.rs  extensions.rs  mod.rs  ring_groups.rs  routes.rs  sip_profiles.rs  trunks.rs  voicemail.rs
rustalk-cloud/src/models/: mod.rs
rustalk-core/: Cargo.toml
rustalk-core/src/: lib.rs
rustalk-core/src/acl/: mod.rs
rustalk-core/src/acme/: client.rs  mod.rs  storage.rs  validation.rs
rustalk-core/src/auth/: mod.rs
rustalk-core/src/b2bua/: call_leg.rs  mod.rs  session.rs
rustalk-core/src/config/: mod.rs
rustalk-core/src/media/: codec.rs  mod.rs  sdp.rs  srtp.rs
rustalk-core/src/routing/: evaluator.rs  matcher.rs  mod.rs
rustalk-core/src/sip/: header.rs  message.rs  method.rs  mod.rs  parser.rs  response.rs
rustalk-core/src/transport/: mod.rs  tls.rs  udp.rs
rustalk-core/src/voicemail/: mod.rs
rustalk-edge/: Cargo.toml
rustalk-edge/src/: lib.rs
rustalk-edge/src/gateway/: mod.rs
rustalk-edge/src/health/: mod.rs
rustalk-edge/src/teams/: mod.rs
rustalk-webui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
rustalk-webui/src/: App.tsx  index.css  mockData.ts  theme.tsx
rustalk-webui/src/api/: client.ts
rustalk-webui/src/components/: Layout.tsx
rustalk-webui/src/pages/: CallLogs.tsx  Calls.tsx  Certificates.tsx  Codecs.tsx  Configuration.tsx  DIDs.tsx  Dashboard.tsx  Extensions.tsx  RatesManagement.tsx  RingGroups.tsx  Routes.tsx  SipProfiles.tsx  Statistics.tsx  TeamsEdge.tsx  Trunks.tsx
rustalk-webui/src/types/: index.ts
scripts/: bump-version.sh
