[workspace]
members = [
    "rustalk-core",
    "rustalk-edge",
    "rustalk-cloud",
    "rustalk-cli",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["RusTalk Contributors"]
license = "MIT"
repository = "https://github.com/halcycon/RusTalk"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
rustls = "0.22"
rustls-pemfile = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "json"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.4", features = ["derive"] }
axum = "0.7"
tower = "0.4"
bytes = "1.5"
nom = "7.1"
async-trait = "0.1"
instant-acme = "0.7"
rcgen = "0.13"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
