[package]
name = "rustalk-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "rustalk"
path = "src/main.rs"

[dependencies]
rustalk-core = { path = "../rustalk-core" }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rustyline = "14.0"
dirs = "5.0"
