[package]
name = "rustalk-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }
nom = { workspace = true }
async-trait = { workspace = true }
uuid = { version = "1.6", features = ["v4"] }
instant-acme = { workspace = true }
rcgen = { workspace = true }
base64 = "0.22"
x509-parser = "0.16"
sha2 = "0.10"
regex = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
